# zed

./: Cargo.toml  gpu_embeddings_plan.md  gpu_semantic_search_completion_plan.md
crates/assistant_tools/: Cargo.toml
crates/assistant_tools/src/: assistant_tools.rs  semantic_search_tool.rs
crates/code-parsers/: Cargo.toml
crates/code-parsers/src/: lib.rs
crates/semantic_index/: Cargo.toml
crates/semantic_index/src/: chunking_v2.rs  embedding.rs  semantic_index.rs  settings.rs  vector_store.rs
crates/semantic_index/src/embedding/: gpu.rs
crates/semantic_index/src/vector_store/: qdrant.rs
crates/zed/: Cargo.toml
crates/zed/src/: main.rs
docs/src/: SUMMARY.md  configuring-zed.md
docs/src/ai/: overview.md  semantic-search.md  tools.md
