[package]
name = "code-parsers"
version = "0.1.0"
edition.workspace = true
license = "GPL-3.0-or-later"

[dependencies]
anyhow.workspace = true
tree-sitter.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-typescript.workspace = true
tree-sitter-python.workspace = true
tree-sitter-go.workspace = true
streaming-iterator.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true